# workerverday

./: .classpath  .mymetadata  .myumldata  .project  README.md  startserver.sh_修改说明.txt  startserver_参考.sh  struts-2.0.dtd
.externalToolBuilders/: com.genuitec.eclipse.ast.deploy.core.DeploymentBuilder.launch  com.genuitec.eclipse.j2eedt.core.DeploymentDescriptorValidator.launch  com.genuitec.eclipse.j2eedt.core.J2EEProjectValidator.launch  com.genuitec.eclipse.j2eedt.core.WebClasspathBuilder.launch
.externalToolBuilders/CVS/: Entries  Repository
CVS/: Entries  Repository
WebRoot/: aero.jsp  dataTransfer.jsp  getfiledata.jsp  hzlogin.jsp  imLogin.jsp  index.html  login.jsp  office.html  playtest.jsp  qrcode.jsp  showimg.jsp  stylechoose.jsp  syschoose.jsp  sysmanagerchoose.jsp  test.jsp  testhtml.jsp  tipPage.jsp  todo.jsp  ucapForward.jsp  ulogin.jsp
WebRoot/ADMIN/: index.jsp  login.jsp
WebRoot/ADMIN/CVS/: Entries  Repository
WebRoot/ADMIN/include/: platformresources.jsp  session.jsp
WebRoot/ADMIN/js/: common.js  gb2py.js  index.js  jquery.tipHelp.js  jquery.ucapform.js  linewell.ucap.admin.settings.js  login.js  pageStep.js
WebRoot/ADMIN/module/: configBuildFrame.jsp  formList.jsp  formUIDesigner.jsp  index.jsp  isFlowSelect.jsp  moduleInfo.jsp  subbutton.jsp  subbuttons.jsp  subbuttonsConfig.jsp  tip.jsp  viewColumn.jsp  viewList.jsp  viewcolumns.jsp  viewcolumnsConfig.jsp  visualflow.jsp
WebRoot/ADMIN/scheme/: menu.jsp  portal.jsp
WebRoot/ADMIN/style/: build.css  buildCommon.css  businessModeling.css  common.css  index.css  login.css  moduleSetting.css  popNewForm.css  systemIndex.css  systemManage.css  tip.css  uploadPop.css  viewSelect.css
WebRoot/ADMIN/sysManager/: appList.jsp  buttonList.jsp  composeFormList.jsp  createAppSteps.jsp  dbViewList.jsp  designElementList.jsp  formShowList.jsp  index.jsp  moduleViewList.jsp
WebRoot/ADMIN/uploadJsp/: ImportExcelTemplate.xls  processExcel.jsp  uploadExcel.jsp
WebRoot/APPADMIN/: header.jsp  index.jsp  login.jsp
WebRoot/APPADMIN/CVS/: Entries  Repository
WebRoot/APPADMIN/style/: login.css
WebRoot/CGT/: generate.jsp  index.jsp  itemMap.jsp  step1.jsp  step2.jsp  step3.jsp
WebRoot/CGT/CVS/: Entries  Repository
WebRoot/CGT/include/: common.jsp
WebRoot/CGT/js/: common.js  formRelation.js  jquery-appselector.js  jquery-tabscroll.js  jquery.cookie.js  modulePrompt.js
WebRoot/CGT/jsp/: modulePrompt.jsp
WebRoot/CGT/style/: genCode.css
WebRoot/CVS/: Entries  Repository  Root
WebRoot/PORTAL/: index.jsp
WebRoot/UDDI/: index.jsp
WebRoot/UMC/: changePassword.jsp  editUser.jsp  login.jsp  main.jsp
WebRoot/WEB-INF/: ApasInfoAction.properties  LianDong.properties  action_fds.properties  appElement.xml  configLog.json  extends.properties  jwebap.xml  mapping.xml  proxool-GBase.xml  proxool.xml  quartz.properties  redevelopverbs.crm.properties  redevelopverbs.properties  server-config.wsdd  tblconf.properties  ucap_copy_para_configure.xml  ucap_element_fk_cfg.xml  ucap_element_para_cfg.xml  ucap_para_interface_configure.xml  uddiConfig.xml  verbs.properties  verbs_cms.properties  verbs_ess.properties  versionverbs.properties  web.xml
WebRoot/WEB-INF/templates/redevelop/: Action.gn  Bean.gn  DAO.gn  Getter.gn  Manager.gn  commonJsp.gn  formJsp.gn  formJspHead.gn  viewJsp.gn
WebRoot/WEB-INF/templates/redevelop/CVS/: Entries  Repository
WebRoot/amchart/: read me.txt
WebRoot/client/: setup.rar
WebRoot/core/: nocache.jsp  params.jsp  task.jsp
WebRoot/crm/: index.jsp  login.jsp  main.jsp
WebRoot/default/: common.jsp
WebRoot/demo/: demo_login.js  demo_menu.js  demo_module.js  demo_navigation.js  demo_portal.js  demo_shortcut.js  index.jsp  login.jsp
WebRoot/eWebEditor/: V4.80使用说明.txt  ewebeditor.htm
WebRoot/flow/: 001C77D646124A25806F130000006C00.xml  06BDC65DD140447F007A0E0840000000.xml  BC9944AF5D2D412C3F3F3F3F3F10173F.xml  BCA021094E324D1F3F6B5C2E3F7E3F3F.xml  DE8B081EC7AD4B513F26693F045C3F3F.xml  EC18588E8F1644B2007D7600790B0000.xml  F2EBF5C039E647F9006B00005D00005C.xml  ucap_dynamicRoleList.xml  ucap_extend_field.xml  ucap_flowRoleList.xml  ucap_flow_action_configure.xml  ucap_flowlist0.xml  ucapworkflow_action_ID.properties  ucapworkflow_messages_zh_CN.properties
WebRoot/formDesigner/: CommonSelectWindow.jsp  ComponentTree.xml  FlextableRefined.html  FlowBox_Sample.html  FlowBox_Sample.swf  FormDesigner.html  FormDesigner.jsp  FormDesigner.swf  FormDesigner_old.jsp  clipboardManager.html  clipboardManager.jsp  index.jsp
WebRoot/help/: help.html
WebRoot/html/: blank.docx  error.html  圆桌.html
WebRoot/js/: gziphelp.txt  ucap-min.js  ucapMin.gzjs  ucapMin.js
WebRoot/login/: appSelect.jsp  logincheck.jsp  loginimage.jsp  sendVerify.jsp
WebRoot/lw-admin/: index.jsp  win7index.jsp
WebRoot/plus/: fileUpload.jsp  result.jsp
WebRoot/portalDesigner/: DesignPanel.html  DesignPanel.swf  Main.html  Main.swf  portalDesigner.html  portalDesigner.jsp  portalDesigner.swf
WebRoot/setup/: index.jsp
WebRoot/system/: configLog.json  index.jsp  login.jsp
WebRoot/update/: resource.jsp  update0829.jsp
WebRoot/upload/: 4.doc
WebRoot/version/: batchUpgrade.jsp  pack.jsp  upgrade.jsp  view.jsp
core/CVS/: Entries  Repository
doc/CVS/: Entries  Repository
doc/word编辑控件/: NTKO OFFICE文档控件JavaScript编程指南.doc  域交换帮助手册.docx  集成步骤.docx
doc/数据/: ucap.dmp
doc/首页/: db.txt
gzhb/: gzhb.struts.xml
gzhb/CVS/: Entries  Repository
src/: Integration.properties  ahsga_new.struts.xml  caches.properties  globalsession.xml  globalsession_ess.xml  hibernate.cfg.xml  log4j.properties  memcached.properties  message.properties  message_zh.properties  oscache.properties  resourcescache.xml
src/CVS/: Entries  Repository
src/hbm/: App_View.hbm.xml  App_View_Column.hbm.xml  FlowInfo.hbm.xml  HandleInfo.hbm.xml  MonitorLight.hbm.xml  OnlyMonitorInfo.hbm.xml  PortalComplain.hbm.xml  PortalIssue.hbm.xml  SuperviseCaseMarkScore.hbm.xml  SuperviseDutyPeople.hbm.xml  SuperviseForm.hbm.xml  SuperviseMonitorRecord.hbm.xml  SuperviseMonitorReply.hbm.xml  SuperviseRuleKey.hbm.xml  SuperviseShareItem.hbm.xml
(+3914 files in other folders)
