<%@page contentType="text/html;charset=UTF-8"%>
<%@page import="com.linewell.ucap.session.Session" %>
<%@page import="com.linewell.ucapx.common.WebAppUtils" %> 
<%@page import="com.linewell.ucap.platform.cache.style.Style"%>
<%@page import="com.linewell.ucapx.style.StyleApi"%>

<%
/**
 * 应用系统的公共文件
 * 此文件在最终展示页面中加载，其他地方不加载
 * @auth xhuatang@linewell.com
 * @since 2011-07-01
 */
 //系统的路径
String systemPath = request.getContextPath() + "/";

//获取Session对象
Session ucapSession = WebAppUtils.getSession(request);
//用户的类型
Style userStyle = null;
//用户类型的路径
String userStylePath = "";
if(null != ucapSession){
	//个人样式
	userStyle = ucapSession.getStyle();
	if(null==userStyle){
		StyleApi sm = new StyleApi();
		userStyle = sm.getAllStyle().get(0);
		ucapSession.setStyle(userStyle);
	}
	userStylePath = systemPath + userStyle.getPath() + "/";
}
if(null == ucapSession){
  response.sendRedirect(request.getContextPath() + "/" + "$appName$/login.jsp");
  return;
}
//当前应用的路径
String appPath  = systemPath + "$appName$/";
//当前应用系统的id
String currentAppId = ucapSession.getApp().getUnid();
%>
