<%@page contentType="text/html;charset=UTF-8"%>
<%@page import="java.util.List"%>
<%@page import="org.apache.commons.lang.StringUtils"%>
<%@page import="com.linewell.ucapx.form.FormUtilsApi"%>
<%@page import="com.linewell.ucapx.form.CommonFormApi"%>
<%@page import="com.linewell.ucap.platform.cache.form.Form"%>
<%@page import="com.linewell.ucapx.form.ForeignApi"%>

<%@page import="$BeanFullClass$"%>
<%@page import="$BeanManagerFullClass$"%>


<%@include file="../common.jsp"%>
<%
/**
 * 表单的最终展示页面,可处理主表或者从表的关系
 * @author xhuatang@linewell.com
 * @since 2011-07-14
 */
//表单的UNID
String formUnid = request.getParameter("formId");

//主表单的FormUNID
String mainFormId = request.getParameter("mainFormId");


//当前文档新建或者修改标志，1:新增 2:修改
String formFlag = "1";
String curDocUnid = "";

FormUtilsApi fuApi = new FormUtilsApi();
fuApi.setAppPath(systemPath);

CommonFormApi commonApi = new CommonFormApi();
Form form = commonApi.getForm(formUnid);

//取文档记录
$BeanName$ $BeanObjectName$ = null;

//如果是主表
if(StringUtils.isEmpty(mainFormId)){
    //当前对象的unid
    String unid = request.getParameter("unid");
    if(StringUtils.isEmpty(unid)) unid="";    
    if(StringUtils.isNotEmpty(unid)){
        $BeanManagerName$ $BeanObjectName$Manager = new $BeanManagerName$();
        $BeanObjectName$ = $BeanObjectName$Manager.get(unid, ucapSession);
    } 
}else{//如果是附表
    //取外键
    ForeignApi foreignApi = new ForeignApi();
    String fkName = foreignApi.getFkName(mainFormId, formUnid);
    //主表的UNID
    String mainUnid = request.getParameter("mainUnid");
     
    if(StringUtils.isNotEmpty(mainUnid)){
        $BeanManagerName$ $BeanObjectName$Manager = new $BeanManagerName$();
        List<$BeanName$> $BeanObjectName$List =$BeanObjectName$Manager.getList(fkName, mainUnid, ucapSession);
        if (null!=$BeanObjectName$List && !$BeanObjectName$List.isEmpty()){
            $BeanObjectName$ = $BeanObjectName$List.get(0);
        }
    }   
    
}

if (null == $BeanObjectName$) {
    fuApi.setGetDefParam(true,ucapSession);
    $BeanObjectName$ = new $BeanName$();  
} else {
    formFlag = "2";
    //TODO 主键替换即可
    curDocUnid = $BeanObjectName$.get$PrimaryKeyName$();
    fuApi.setGetDefParam(false,ucapSession);
}
%>
<input type="hidden" id="_ucap_doc_unid<%=formUnid %>" name="_ucap_doc_unid" formUnid="<%=formUnid %>" value="<%= curDocUnid %>" />
<input type="hidden" id="_ucap_doc_flag<%=formUnid %>" name="_ucap_doc_flag" formUnid="<%=formUnid %>" value="<%=formFlag%>" />
